fix tables clipping some header row entries

--- a/src/components/Extras/Tables.scss
+++ b/src/components/Extras/Tables.scss
@@ -159,8 +159,8 @@ table {
   
       &.rank        { max-width: 30px; }
       &.speed,
-      &.play-count  { max-width: 50px; }
-      &.percent     { max-width: 65px; }
+      &.play-count  { max-width: 70px; }
+      &.percent     { max-width: 85px; }
       &.year        { max-width: 60px; }
       &.scores-count,
       &.length      { max-width: 70px; }
@@ -192,8 +192,8 @@ table {
 
       &.rank        { max-width: 20px; }
       &.speed,
-      &.play-count  { max-width: 30px; }
-      &.percent     { max-width: 35px; }
+      &.play-count  { max-width: 60px; }
+      &.percent     { max-width: 75px; }
       &.year        { max-width: 60px; }
       &.scores-count,
       &.length      { max-width: 70px; }
